src/modules/Dashboard/modules/landing/pages/LandingPage.module.css
/* ... */
.navLinks {
  list-style: none;
  display: flex;
  gap: 15px;
  font-size: 0.9rem;
  font-weight: 600;
}

.navButtons button {
  margin-left: 10px;
}

.hero-section {
  margin-top: 20px;
}

.highlight {
  color: #007bff;
  font-weight: bold;
}

.featuresGrid {
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  gap: 0px;
  margin-top: 50px;
}

.featureCard {
  padding: 15px;
  /* border-radius: 10px; */
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  display: flex;
  flex-direction: column;
  align-items: center;
}

.featuresGrid .featureCard:first-child{
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
}

.featuresGrid .featureCard:last-child{
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
}

.joinBtn,
.loginBtn {
  background-color: #007bff;
  color: rgb(255, 255, 255);
  border-radius: 20px;
  padding: 10px 20px;
  font-weight: 700;
  font-size: 0.9rem;
}


.joinBtn:hover,
.loginBtn:hover {
  background-color: #005ec3;
  transition: all 0.3s ease;

}

.downloadBtn:hover {
  background-color: #e6e3e3;
  transition: all 0.3s ease;

}

.heroSection {
  display: flex;
  flex-direction: column;
  padding: 8rem 0rem;
  align-items: center;
}

.heroSection h1{
  margin-top: 50px;
}

.heroSection h1 span{
  color: #007bff;
  font-weight: bold;
}

.heroLeft {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-right: 0;
  padding-right: 0;
}

.heroLeft h1 {
  font-size: 3.1rem;
  font-weight: 800;
  text-align: center;
  max-width: 700px;
}

.heroLeft p {
  font-size: 1rem;
  font-weight: 500;
  color: gray;
  text-align: center;
  max-width: 28rem;
}

.heroImage img {
  width: 100%;
  max-width: 100vw;
  height: auto;
  margin-top: 2rem;
}

.highlightPoints {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  text-decoration: none;
  list-style: none;
  padding: 0;
  margin: 0;
  margin-top: 0.5rem;
}

.highlightPoints li {
  text-align: left;
}

.higlightPointItems {
  display: flex;
  align-items: center;
  margin-top: 1rem;
}

.higlightPointItems div {
  margin-right: 0.5rem;
  background-color: #e2e2e3;
  border-radius: 50%;
  padding: 5px;
}

.higlightPointItems p {
  font-size: 0.95rem;
  font-weight: 500;
  max-width: 15rem;
}

.downloadBtn {
  border: 1px solid black;
  border-radius: 20px;
  padding: 10px 20px;
  font-weight: 700;
  font-size: 0.9rem;
}

.heroDescription{
  font-weight: 400;
  max-width: 800px;
  text-align: center;
  font-size: 1.2rem;
  color: #666;
}

.ctaButtons {
  margin-top: 1rem;
  display: flex;
  gap: 1rem;
}

.ctaButtons button {
  margin-top: 1rem;
}

.featureCard {
  display: flex;
  flex-direction: column;
  align-items: center;
  cursor: pointer;
  padding: 3rem 1rem;
  transition: transform 0.3s ease, box-shadow 0.3s ease;
}

/* .featureCard:hover {
  transform: translateY(-5px);
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
} */

.featureCard h3 {
  font-size: 1.1rem;
  font-weight: 800;
  text-align: center;
}

.featureCard p {
  font-size: 0.8rem;
  font-weight: 400;
  text-align: center;
}

.leftRightGrid {
  display: grid;
  grid-template-columns: 1fr 1fr;
  margin-top: 20px;
  gap: 20px;
}

.leftRightGridCustom {
  grid-template-columns: 50% 50%;
}

.iframeContainer iframe {
  width: 100%;
  height: 100%;
  aspect-ratio: 16/9;
}

.storyTitle h1 {
  font-size: 3rem;
  text-align: left;
  max-width: 35rem;
  font-weight: 800;
  line-height: normal;
}

.hackathonBox {
  display: grid;
  grid-template-columns: repeat(3, minmax(20rem, 1fr));
  gap: 1.5rem;
  margin-top: 20px;
}

.storyTitle h6 {
  font-weight: 400;
  margin-bottom: 4rem;
  max-width: 800px;
  text-align: left;
  font-size: 1.2rem;
  color: #666;
  margin: 16px 0px;
  margin-bottom: 32px;
}

.topBottomGrid {
  display: flex;
  flex-direction: column;
  justify-items: center;
  padding: 10rem 0rem;
  align-items: center;
}

.roadMaps {
  display: flex;
  flex-direction: column;
  width: 60%;
}

.roadMaps h1 {
  font-size: 2rem;
  font-weight: 700;
  text-align: center;
  line-height: normal;
}

.roadMaps p {
  font-size: 1rem;
  font-weight: 400;
  margin-bottom: 2rem;
  margin-top: 16px;
  text-align: center;
}

.specialEventsSection {
  display: flex;
  flex-direction: column;
  justify-items: center;
  padding-top: 10rem;
  align-items: center;
}

.specialEventsSection .specialEvents {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.specialEventsSection .specialEvents h1 {
  font-size: 2.5rem;
  font-weight: 800;
}

.specialEventsSection .specialEvents h6 {
  font-weight: 400;
  margin-bottom: 4rem;
  max-width: 800px;
  text-align: center;
  font-size: 1.2rem;
  color: #666;
  margin-top: 10px;
}

.specialEventsSection .specialEvents .specialEventsCards {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 4rem;
}

@media (max-width: 768px) {
  .specialEventsSection .specialEvents .specialEventsCards {
    flex-direction: column;
    gap: 2rem;
  }
}

.camparison {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.camparison h1 {
  font-size: 2.5rem;
  font-weight: 800;
  margin-bottom: 4rem;
  text-align: center;
}

.dot {
  display: inline-block;
  width: 40px;
  height: 40px;
  margin-right: 20px;
  border-radius: 100%;
  background: rgba(255, 255, 255, 0.7);
  box-shadow: inset 0px 0px 10px 2px rgba(0, 255, 182, 0.5),
    0px 0px 10px 2px rgba(0, 255, 135, 0.3);
  animation: pulse 1s alternate infinite;
}

@keyframes pulse {
  0% {
    background: rgba(255, 255, 255, 0.3);
    box-shadow: inset 0px 0px 10px 2px rgba(0, 255, 182, 0.5),
      0px 0px 5px 2px rgba(0, 255, 135, 0.3);
  }

  100% {
    background: rgba(255, 255, 255, 1);
    box-shadow: inset 0px 0px 10px 2px rgba(0, 255, 182, 0.5),
      0px 0px 15px 2px rgba(0, 255, 135, 1);
  }
}

.camparison table tr td {
  padding: 2rem 1rem;
  text-align: center;
}
/* ... */

